before change ssd 1TB - 22-12-2021

--- a/OurOutputLayer_FullClass-TrainCNN(InceptionV3)_NoFreezModel_No-ClassImbalance-NoAugmentSlowLR.ipynb
+++ b/OurOutputLayer_FullClass-TrainCNN(InceptionV3)_NoFreezModel_No-ClassImbalance-NoAugmentSlowLR.ipynb
@@ -5090,17 +5090,17 @@
     "\n",
     "class_names = ['1WayConnectorforFoley', '2WayConnectorforFoley', '2WayFoleyCatheter', '3WayConnectorforFoley', '3Waystopcock', 'AlcoholBottle', 'AlcoholPad', 'BootCover', 'CottonBall', 'CottonSwap', 'Dilator', 'DisposableInfusionSet', 'ExtensionTube', 'FaceShield', 'FrontLoadSyringe', 'GauzePad', 'Glove', 'GuideWire', 'LiquidBottle', 'Mask', 'NGTube', 'NasalCannula', 'Needle', 'OxygenMask', 'PPESuit', 'PharmaceuticalProduct', 'Pill', 'PillBottle', 'PrefilledHumidifier', 'PressureConnectingTube', 'ReusableHumidifier', 'SodiumChlorideBag', 'SterileHumidifierAdapter', 'SurgicalBlade', 'SurgicalCap', 'SurgicalSuit', 'Syringe', 'TrachealTube', 'UrineBag', 'Vaccinebottle', 'WingedInfusionSet']\n",
     "\n",
-    "x_train_indoor = np.concatenate([ x for x,y in test_indoor_ds],axis=0)\n",
-    "x_train_outdoor = np.concatenate([ x for x,y in test_outdoor_ds],axis=0)\n",
-    "x_train_belt = np.concatenate([ x for x,y in test_belt_ds],axis=0)\n",
-    "y_train_indoor = np.concatenate([ y for x,y in test_indoor_ds],axis=0)\n",
-    "y_train_outdoor = np.concatenate([ y for x,y in test_outdoor_ds],axis=0)\n",
-    "y_train_belt = np.concatenate([ y for x,y in test_belt_ds],axis=0)\n",
-    "print(f\"train_indoor num x,y : {len(x_train_indoor)},{len(y_train_indoor)}\")\n",
-    "print(f\"train_outdoor num x,y : {len(x_train_outdoor)},{len(y_train_outdoor)}\")\n",
-    "print(f\"train_belt num x,y : {len(x_train_belt)},{len(y_train_belt)}\")\n",
-    "x_all = np.concatenate([x_train_indoor,x_train_outdoor,x_train_belt],axis=0)\n",
-    "y_all = np.concatenate([y_train_indoor,y_train_outdoor,y_train_belt],axis=0)\n",
+    "x_test_indoor = np.concatenate([ x for x,y in test_indoor_ds],axis=0)\n",
+    "x_test_outdoor = np.concatenate([ x for x,y in test_outdoor_ds],axis=0)\n",
+    "x_test_belt = np.concatenate([ x for x,y in test_belt_ds],axis=0)\n",
+    "y_test_indoor = np.concatenate([ y for x,y in test_indoor_ds],axis=0)\n",
+    "y_test_outdoor = np.concatenate([ y for x,y in test_outdoor_ds],axis=0)\n",
+    "y_test_belt = np.concatenate([ y for x,y in test_belt_ds],axis=0)\n",
+    "print(f\"train_indoor num x,y : {len(x_test_indoor)},{len(y_test_indoor)}\")\n",
+    "print(f\"train_outdoor num x,y : {len(x_test_outdoor)},{len(y_test_outdoor)}\")\n",
+    "print(f\"train_belt num x,y : {len(x_test_belt)},{len(y_test_belt)}\")\n",
+    "x_all = np.concatenate([x_test_indoor,x_test_outdoor,x_test_belt],axis=0)\n",
+    "y_all = np.concatenate([y_test_indoor,y_test_outdoor,y_test_belt],axis=0)\n",
     "print(f\"all num x,y :{len(x_all)},{len(y_all)}\")\n",
     "# let's predict\n",
     "y_all_predicted = last_epoch_model.predict(x_all,batch_size=128)"
