--- a/Incepv3_OurOutputLayer_FullClass-TrainCNN(InceptionV3)_NoFreezModel_No-ClassImbalance-NoAugmentSlowLR.ipynb
+++ b/Incepv3_OurOutputLayer_FullClass-TrainCNN(InceptionV3)_NoFreezModel_No-ClassImbalance-NoAugmentSlowLR.ipynb
@@ -1070,6 +1070,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Fitting"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 20,
    "metadata": {},
